# ssrwin

./: BUILD.txt  CMakeLists.txt  Makefile
src/: config.h  inet_XtoX.c  local.c  utils.c
src/obfs/: obfs.c
ss/: acl.h  plugin.c  udprelay.c  utils.c
ssr/: acl.h  udns.h  utils.c
